--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
+    <!-- importa as fontes do google -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Proffy</title>
   </head>
   <body>
