--- a/web/public/index.html
+++ b/web/public/index.html
@@ -7,8 +7,13 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <!-- importa as fontes do google -->
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins&display=swap"
+      rel="stylesheet"
+    /> -->
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@100;300;400;600;700&display=swap"
       rel="stylesheet"
     />
 
